# expeditions-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: asgi.py  settings.py  settings_test.py  urls.py
expeditions/: admin.py  auth.py  consumers.py  events.py  exception_handler.py  exceptions.py  models.py  routing.py  selectors.py  serializers.py  services.py  urls.py  views.py
expeditions/migrations/: 0001_initial.py
expeditions/tests/: conftest.py  test_api.py  test_confirm_invitation.py  test_constraints.py  test_create_expedition.py  test_events.py  test_finish_expedition.py  test_invite_member.py  test_set_ready.py  test_start_expedition.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
